--- a/src/styles.css
+++ b/src/styles.css
@@ -15,6 +15,7 @@ hr{
 .top-30 {
   margin-top: 30px;
 }
+
 .puntero{
   cursor: pointer;
 }
@@ -43,6 +44,10 @@ hr{
   border-radius: 100%;
 }
 
+.img-50 {
+  height: 50px;
+  width: 50px;
+}
 
 /* Animaciones */
 .animated {
