--- a/src/app/components/chartjs/chartjs.component.html
+++ b/src/app/components/chartjs/chartjs.component.html
@@ -1,3 +1,4 @@
 <div style="display: block">
     <canvas baseChart [data]="pieChartData" [labels]="pieChartLabels" [chartType]="pieChartType" (chartHover)="chartHovered($event)" (chartClick)="chartClicked($event)"></canvas>
 </div>
+<app-mapagoogle></app-mapagoogle>
