--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -17,6 +17,9 @@
             <li class="nav-item" routerLinkActive="active">
                 <a class="nav-link" [routerLink]="['chart']">Chart </a>
             </li>
+            <li class="nav-item" routerLinkActive="active">
+                <a class="nav-link" [routerLink]="['ffmm']">Valores FFMM </a>
+            </li>
         </ul>
     </div>
 </nav>
